--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.41",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "grommet": "^2.21.0",
     "harmony-jenya-bnc-onboard": "^1.34.7-3",
@@ -17,6 +17,7 @@
     "mobx-react": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.24"
+    "@types/styled-components": "^5.1.24",
+    "react-error-overlay": "^6.0.9"
   }
 }
